<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/main_menu_location"
        android:title="@string/location"
        android:icon="@drawable/ic_location"/>
    <item
        android:id="@+id/main_menu_contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_contact_us"/>
    <item
        android:id="@+id/main_menu_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"/>
    <item
        android:id="@+id/main_menu_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting"/>

</menu>