<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".views.activities.SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_logo"
                android:layout_marginBottom="@dimen/_15sdp"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_name"
                style="@style/Text_h3_m"
                android:layout_marginBottom="@dimen/_30sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/shape_rectangle_corner_background_form"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    style="@style/Text_h4_m"
                    android:layout_marginBottom="@dimen/_5sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/amber"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_description"
                    style="@style/Text_h6_r"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp" />

                <EditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/e_mail"
                    android:gravity="center"
                    android:background="@drawable/shape_rectangle_corner_white"
                    style="@style/Text_h6_r"
                    android:importantForAutofill="no"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:background="@drawable/shape_rectangle_corner_white"
                    style="@style/Text_h6_r"
                    android:importantForAutofill="no"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        style="@style/Button_blue"
                        android:text="@string/sign_in"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_30sdp" />

                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/sign_in_progress"
                        style="@style/SpinKitView.ThreeBounce"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        app:SpinKit_Color="@color/grey"
                        android:layout_marginBottom="@dimen/_8sdp"/>

                </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_recovery_description"
                    style="@style/Text_h6_r"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/sign_in_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    style="@style/Text_h5_r"
                    android:textColor="@color/selector_color_amber_to_grey"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_5sdp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>