<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:gravity="top|center"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basic_data"
            style="@style/Text_h4_r"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/shape_rectangle_corner_background_head_page"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/shape_oval_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/image_personal"
                style="@style/Text_h6_r" />

            <FrameLayout
                android:id="@+id/main_profile_details_container_user_image"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/main_profile_details_user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/im_image_user"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/profile_fragment_user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/im_background_image"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/profile_fragment_edit_user_image"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit"
                app:tint="@color/selector_color_amber_to_grey"
                android:layout_gravity="center"
                android:contentDescription="@string/image" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/back_ground_form"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/shape_oval_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                style="@style/Text_h6_r" />

            <TextView
                android:id="@+id/profile_fragment_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                style="@style/Text_h7_r"
                android:textColor="@color/blue"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/back_ground_form"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginBottom="@dimen/_7sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/shape_oval_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                style="@style/Text_h6_r" />

            <TextView
                android:id="@+id/profile_fragment_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_nationality"
                style="@style/Text_h7_r"
                android:textColor="@color/blue"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/back_ground_form"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/shape_oval_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                style="@style/Text_h6_r" />

            <TextView
                android:id="@+id/profile_fragment_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner_email"
                android:textColor="@color/blue"
                style="@style/Text_h7_r"/>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/back_ground_form"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:src="@drawable/shape_oval_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/image"
                android:layout_marginEnd="@dimen/_10sdp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                style="@style/Text_h6_r" />

            <TextView
                android:id="@+id/profile_fragment_user_mobile_number_inside_saudi_arabi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_mobile"
                android:textColor="@color/blue"
                style="@style/Text_h7_r"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/back_ground_form"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"/>

    </LinearLayout>
</layout>